force-app/main/default/objects/Case/fields/Actual_Parent_Type__c.field-meta.xml
<CustomField>
    <fullName>Actual_Parent_Type__c</fullName>
    <label>Actual Parent Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>