force-app/main/default/objects/Case/fields/Actual_Type__c.field-meta.xml
<CustomField>
    <fullName>Actual_Type__c</fullName>
    <label>Actual Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>