force-app/main/default/objects/Case/fields/Case_Type_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Type (Lookup)</label>
    <referenceTo>Case_Type__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>CaseType</relationshipName>
    <type>Lookup</type>
</CustomField>