force-app/main/default/objects/Case/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENVIRONMENTAL SERVICES</fullName>
            </value>
            <value>
                <fullName>MAINTENANCE</fullName>
            </value>
            <value>
                <fullName>DEVELOPMENT</fullName>
            </value>
            <value>
                <fullName>TRANSPORTATION AND DEVELOPMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>