force-app/main/default/objects/Case/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SANITATION</fullName>
            </value>
            <value>
                <fullName>LANDSCAPE MAINTENANCE</fullName>
            </value>
            <value>
                <fullName>BLIGHT ENFORCEMENT</fullName>
            </value>
            <value>
                <fullName>TRAFFIC ENGINEERING</fullName>
            </value>
            <value>
                <fullName>RECYCLING</fullName>
            </value>
            <value>
                <fullName>WW OPERATIONS</fullName>
            </value>
            <value>
                <fullName>STREET MAINTENANCE</fullName>
            </value>
            <value>
                <fullName>DRAINAGE MAINTENANCE</fullName>
            </value>
            <value>
                <fullName>PERMITS &amp; INSPECTIONS</fullName>
            </value>
            <value>
                <fullName>ENVIRONMENTAL</fullName>
            </value>
            <value>
                <fullName>SUBDIVISIONS</fullName>
            </value>
            <value>
                <fullName>FIELD ENGINEERING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>