force-app/main/default/objects/Case/fields/Parent_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Type__c</fullName>
    <label>Parent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GARBAGE</fullName>
            </value>
            <value>
                <fullName>BLIGHTED PROPERTIES</fullName>
            </value>
            <value>
                <fullName>STREET/TRAFFIC ISSUES</fullName>
            </value>
            <value>
                <fullName>RECYCLING</fullName>
            </value>
            <value>
                <fullName>SEWER/WASTEWATER</fullName>
            </value>
            <value>
                <fullName>ROAD MAINTENANCE ISSUES</fullName>
            </value>
            <value>
                <fullName>DRAINAGE, EROSION, FLOODING OR HOLES</fullName>
            </value>
            <value>
                <fullName>MOWING AND TREE ISSUES</fullName>
            </value>
            <value>
                <fullName>BUILDING CODE/ZONING VIOLATIONS</fullName>
            </value>
            <value>
                <fullName>ENVIRONMENTAL ISSUES</fullName>
            </value>
            <value>
                <fullName>NEIGHBORHOOD/SUBDIVISION ISSUES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>