force-app/main/default/objects/Case/fields/Parent_Type_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Parent_Type_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Type (Lookup)</label>
    <referenceTo>Parent_Type__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>ParentType</relationshipName>
    <type>Lookup</type>
</CustomField>