force-app/main/default/objects/Case/listViews/New_Cases.listView-meta.xml
<ListView>
    <fullName>New_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Parent_Type__c</columns>
    <columns>Actual_Parent_Type__c</columns>
    <columns>CASES.TYPE</columns>
    <columns>Actual_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New Cases</label>
</ListView>