force-app/main/default/objects/Case/listViews/Open_Cases.listView-meta.xml
<ListView>
    <fullName>Open_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Parent_Type__c</columns>
    <columns>CASES.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>On Hold,Escalated,New,In Progress</value>
    </filters>
    <label>Open Cases</label>
</ListView>